--- a/0x15-javascript-web_jquery/tests/1-main.html
+++ b/0x15-javascript-web_jquery/tests/1-main.html
@@ -5,18 +5,12 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
-    <header>
+    <header> 
       First HTML page
     </header>
-    <br />
-    <div id="add_item">Add item</div>
-    <br />
-    <ul class="my_list">
-      <li>Item</li>
-    </ul>
     <footer>
       Holberton School - 2017
     </footer>
-    <script type="text/javascript" src="5-script.js"></script>
+    <script src="../1-script.js"></script>
   </body>
 </html>
