--- a/0x15-javascript-web_jquery/tests/3-main.html
+++ b/0x15-javascript-web_jquery/tests/3-main.html
@@ -3,18 +3,20 @@
   <head>
     <title>Holberton School</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <style>
+      .red {
+        color: #FF0000;
+      }
+    </style>
   </head>
   <body>
-    <header>
-      Star Wars movies
+    <header> 
+      First HTML page
     </header>
-    <br />
-    <ul id="list_movies">
-    </ul>
-    <br />
+    <div id="red_header">Red header</div>
     <footer>
       Holberton School - 2017
     </footer>
-    <script type="text/javascript" src="8-script.js"></script>
+    <script src="../3-script.js"></script>
   </body>
 </html>
