--- a/0x15-javascript-web_jquery/tests/4-main.html
+++ b/0x15-javascript-web_jquery/tests/4-main.html
@@ -13,13 +13,13 @@
     </style>
   </head>
   <body>
-    <header class="green">
+    <header class="green"> 
       First HTML page
     </header>
     <div id="toggle_header">Toggle header</div>
     <footer>
       Holberton School - 2017
     </footer>
-    <script type="text/javascript" src="4-script.js"></script>
+    <script src="../4-script.js"></script>
   </body>
 </html>
