--- a/0x15-javascript-web_jquery/tests/9-main.html
+++ b/0x15-javascript-web_jquery/tests/9-main.html
@@ -3,14 +3,17 @@
   <head>
     <title>Holberton School</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="../9-script.js"></script>
   </head>
   <body>
-    <header>
-      First HTML page
+    <header> 
+      Say Hello!
     </header>
+    <br />
+    <div id="hello"></div>
+    <br />
     <footer>
       Holberton School - 2017
     </footer>
-    <script type="text/javascript" src="1-script.js"></script>
   </body>
 </html>
